 * Album artist is now correctly "translated". (PICARD-1)
 * Unicode punctuation is now converted to ASCII by default.
 * WavPack correction files are moved together with the main files.
 * Unicode filename normalization on OS X.
 * Original release date is now saved into %originaldate%.
 * Allow tagging with localized artist aliases (PICARD-17)

Version 0.15.1 - 2011-07-31
 * "Other versions" menu now displays release labels and catalog numbers.
 * Added CD-R, 8cm CD to the format mapping.
 * Picard no longer fails to load releases with new or unknown media formats.
 * Threading issues that could occasionally cause Picard to stop loading files have been fixed.
 * Fixed album metadata processor plugins not working (#5960)
 * Fixed loading of standalone recordings (#5961)
 * Fixed requests stopping at midnight (#5963)
 * Stopped using QDateTime for timing requests (for Qt 4.6 compatibility) (#5967)
 * Fixed display of ampersands in the "other versions" menu. (#5969)
 * Fixed use of numerical functions in advanced scripting.

Version 0.15 - 2011-07-17
 * Added options for using standardized track, release, and artist metadata.
 * Added preferred release format support.
 * Expanded preferred release country support to allow multiple countries.
 * Added support for tagging non-album tracks (standalone recordings).
 * Plugins can now be installed via drag and drop, or a file browser.
 * Added several new tags: %_originaldate%, %_recordingcomment%, and %_releasecomment%
 * Changes to request queuing: added separate high and low priority queues for each host.
 * Tagger scripts now run after metadata plugins finish (#5850)
 * The "compilation" tag can now be $unset or modified via tagger script.
 * Added a shortcut (Ctrl+I) for Edit->Details.
 * Miscellaneous bug fixes.

Version 0.15beta1 - 2011-05-29
 * Support for the NGS web service

Version 0.14 - 2011-05-15
 * Fixed a problem with network operations hanging after a network error (#5794, #5884)